=======================
Legend
=======================
 [+]  A feature added
 [-]  A bug fixed
 [*]  A change
 [!]  An important note
=======================

2010/04/24 oleh_derevenko

 [+]  A cast operator to non-const reference of contained type added for
      CTypeSimpleWrapper.

2009/10/07 oleh_derevenko

 [-]  Tests corrected to avoid checking int64ou alignment on Macs
      (just like for uint64ou)

2009/09/08 oleh_derevenko

 [-]  Enumerated type increment/decrement operators re-implemented in a way that
      can't produce bad code with modern GCCs due to aliasing rules violation.

2008/06/26 oleh_derevenko

 [+]  --disable-asserts option support added for configure.
 
2008/04/19 oleh_derevenko

 [+]  Atomic functions via i486 assembler implementation added (manuall 
      selection with a preprocessor symbol only).
 
2008/04/16 oleh_derevenko

 [-]  Fixed bug with storage memory not being properly zeroed at allocation.

 [*]  Memory customization changed to match assertion failure handler 
      customization. Now it is not necessary to save original pointers,
      just NULL-s are to be assigned to revert from customized to
      default memory menager.
      
2008/04/08 oleh_derevenko

 [!]  Licensing changed: permission to distribute/use library under zlib/libpng
      license added.
      
2008/04/07 oleh_derevenko

 [+]  Initial commit